--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,10 @@ Steps:
     outputBuyerImbalancePath: "data/imbalance_buyer_screening.csv"
     outputSellerImbalancePath: "data/imbalance_seller_screening.csv"
 
+  UpdateDatabaseStep:
+    enable: True
+    databaseFilePath: "data/crypto_screener.sqlite"
+
 Services:
   DataDownloader:
     rateExceedDelaySeconds: 60
