configuration: - added init trader data table option - path to databases - path to log

--- a/logger.conf
+++ b/logger.conf
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=sampleFormatter
-args=('crypto_screener.log',"d",1,30)
+args=('../../log/crypto-screener/crypto_screener.log',"d",1,30)
 
 [formatter_sampleFormatter]
 format=%(asctime)s] p%(process)s {%(filename)s:%(lineno)d} %(levelname)s - %(message)s
