--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,12 @@
 base:
   assetsPath: "data/assets.csv"
-  cryptoHistoryDbPath: "data/crypto_history.sqlite"
-  cryptoScreenerDbPath: "data/crypto_screener.sqlite"
+  cryptoHistoryDbPath: "../../database/crypto_history.sqlite"
+  cryptoScreenerDbPath: "../../database/crypto_screener.sqlite"
+  initTraderDataTable: False
 
 steps:
   dataDownloadStep:
-    enable: False
+    enable: True
     fourHoursOhlcHistory: 180 # 30 days
     dailyOhlcHistory: 201 # about 1/2 year
     weeklyOhlcHistory: 520 # 10 years
