--- a/config.yaml
+++ b/config.yaml
@@ -5,17 +5,17 @@ base:
 
 steps:
   dataDownloadStep:
-    enable: False
+    enable: True
     fourHoursOhlcHistory: 180 # 30 days
     dailyOhlcHistory: 201 # about 1/2 year
     weeklyOhlcHistory: 520 # 10 years
     monthlyOhlcHistory: 120 # 10 years
 
   baseScreeningStep:
-    enable: False
+    enable: True
 
   imbalanceScreeningStep:
-    enable: False
+    enable: True
 
   loadProcessedImbalancesStep:
     enable: True
